Исправлена структура сайта

--- a/Сайт/leibniz/index.html
+++ b/Сайт/leibniz/index.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html>
 <body>
+<header>
+
+    <title>Арифмометр Лейбница</title>
+</header>
+<h2 align='center'>Арифмометр Лейбница</h2>
+<p>Арифмометр Лейбница, 1672 —арифмометр, изобретённый немецким математиком Готфридом Вильгельмом Лейбницем, Готфрида Вильгельма Лейбница который был способен складывать, вычитать, умножать и делить.</p>
+<img src="img/Leybnic.jpg" width="300" height="400">
+<h3>История создания</h3>
+<p>Идея создания машины, выполняющей вычисления, появилась у выдающегося немецкого математика и философа Готфрида Вильгельма Лейбница после его знакомства с голландским математиком и астрономом Христианом Гюйгенсом. Огромное количество вычислений, которое приходилось делать астроному, навело Лейбница на мысль о создании механического устройства, которое могло бы облегчить такие расчёты («Поскольку это недостойно таких замечательных людей, подобно рабам, терять время на вычислительную работу, которую можно было бы доверить кому угодно при использовании машины»).</p>
+
+<p>Арифмометр был создан Лейбницем в 1673 году. Сложение чисел выполнялось в десятичной системе счисления при помощи связанных друг с другом колёс, так же как на вычислительной машине другого выдающегося учёного-изобретателя Блеза Паскаля — «Паскалине». Добавленная в конструкцию движущаяся часть и специальная рукоятка, позволявшая крутить ступенчатое колесо (в последующих вариантах машины — цилиндры), позволяли ускорить повторяющиеся операции сложения, при помощи которых выполнялось деление и перемножение чисел. Необходимое число повторных сложений выполнялось автоматически.</p>
+
+<p>Машина была продемонстрирована Лейбницем во Французской академии наук и Лондонском королевском обществе. Один экземпляр арифмометра попал к Петру Первому.</p>
+
+<p>Были построены два прототипа, до сегодняшнего дня только один сохранился в Национальной библиотеке Нижней Саксонии (нем. Niedersächsische Landesbibliothek) в Ганновере, Германия. Несколько поздних копий находятся в музеях Германии, например, один в Немецком музее в Мюнхене.</p>
+<h3>Значение изобретения</h3>
+Несмотря на недостатки арифмометра Лейбница, он дал изобретателям арифмометров новые возможности. Привод, изобретённый Лейбницем — шагающий цилиндр или колесо Лейбница — использовался во многих вычислительных машинах на протяжении 300 лет, до 1970-х годов.
+<h3 align="center">Изобретатель</h3>
+Го́тфрид Ви́льгельм Ле́йбниц (21 июня (1 июля) 1646 — 14 ноября 1716) — немецкий философ, логик, математик, механик, физик, юрист, историк, дипломат, изобретатель и языковед. Основатель и первый президент Берлинской Академии наук, член Лондонского королевского общества (1673), иностранный член Французской Академии наук.
+<img src="img/Christoph_Bernhard_Francke(ca._1695).jpg" width="300" height="400">
 
 </body>
 </html>
+
+
+
