--- a/Сайт/pascal/index.html
+++ b/Сайт/pascal/index.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html>
 <body>
+<header>
 
+    <title>Суммирующая машина Паска́ля</title>
+</header>
+<h2 align='center'>Суммирующая машина Паска́ля</h2>
+<p>Суммирующая машина Паска́ля, «Паскали́на» (фр. Pascaline) — арифметическая машина, изобретённая французским учёным Блезом Паскалем (1623—1662) в 1642 году.</p>
+ 
+<h3 align='center'>История создания</h3>
+<img align="left" src="img/Metiers_Pascaline_.jpg" width="300" height="200">
+</p>Француз Блез Паскаль начал создавать суммирующую машину «Паскалину» в 1642 году в возрасте 19 лет, наблюдая за работой своего отца, который был сборщиком налогов и часто выполнял долгие и утомительные расчёты.</p>
+<p>Машина Паскаля представляла собой механическое устройство в виде ящичка с многочисленными связанными одна с другой шестерёнками. Складываемые числа вводились в машину при помощи соответствующего поворота наборных колёсиков. На каждое из этих колёсиков, соответствовавших одному десятичному разряду числа, были нанесены деления от 0 до 9. При вводе числа колесики прокручивались до соответствующей цифры. Совершив полный оборот, избыток над цифрой 9 колёсико переносило на соседний разряд, сдвигая соседнее колесо на 1 позицию. Первые варианты «Паскалины» имели пять зубчатых колёс, позднее их число увеличилось до шести или даже восьми, что позволяло работать с большими числами, вплоть до 9 999 999. Ответ появлялся в верхней части металлического корпуса. Вращение колёс было возможно лишь в одном направлении, исключая возможность непосредственного оперирования отрицательными числами. Тем не менее машина Паскаля позволяла выполнять не только сложение, но и другие операции, но требовала при этом применения довольно неудобной процедуры повторных сложений. Вычитание выполнялось при помощи дополнений до девятки, которые для помощи считавшему появлялись в окошке, размещённом над выставленным оригинальным значением.</p>
+
+<p>Несмотря на преимущества автоматических вычислений, использование десятичной машины для финансовых расчётов в рамках действовавшей в то время во Франции денежной системы было затруднительным. Расчёты велись в ливрах, су и денье. В ливре насчитывалось 20 су, в су — 12 денье. Использование десятичной системы в недесятичных финансовых расчётах усложняло и без того нелёгкий процесс вычислений.
+
+<p>Тем не менее примерно за 10 лет Паскаль построил около 50 и даже сумел продать около дюжины вариантов своей машины. Несмотря на вызываемый ею всеобщий восторг, машина не принесла богатства своему создателю. Сложность и высокая стоимость машины в сочетании с небольшими вычислительными способностями служили препятствием её широкому распространению. Тем не менее, заложенный в основу «Паскалины» принцип связанных колёс почти на три столетия стал основой для большинства создаваемых вычислительных устройств.</p>
+
+
+
+
+<h3>Актуальность проблемы </h3>
+<p>Свою машину Паскаль начал проектировать в 17 лет. На мысли о необходимости автоматизировать рутинные вычислительные процессы подростка натолкнул опыт собственного отца. Дело в том, что родитель гениального ученого работал сборщиком налогов и долгое время просиживал за утомительными расчетами. Само проектирование заняло долгое время и потребовало от ученого больших физических, умственных и материальных вложений. В последнем случае помощь Блезу Паскалю оказал собственный отец, который быстро понял преимущества разработки сына. </p>
+<h3>Изобретатель</h3>
+<p>Блез Паска́ль ; 19 июня 1623, Клермон-Ферран, Франция — 19 августа 1662, Париж, Франция) — французский математик, механик, физик, литератор и философ. Классик французской литературы, один из основателей математического анализа, теории вероятностей и проективной геометрии, создатель первых образцов счётной техники, автор основного закона гидростатики.</p>
+<img src="img/pescal.jpg" width="300" height="400">
 </body>
 </html>
