--- a/Сайт/index.html
+++ b/Сайт/index.html
@@ -1,14 +1,21 @@
 <html>
-<body>
-    <ol>
-        <li><a href="antikiter/index.html">Антикитерский механизм</a></li>
-        <li><a href="pascal/index.html">Суммирующая машина Паскаля</a></li>
-        <li><a href="leibniz/index.html">Арифмометр Лейбница</a></li>
-        <li><a href="difference/index.html">Разностная машина Чарльза Бэббиджа</a></li>
-        <li><a href="z1/index.html">Z1</a></li>
-        <li><a href="curta/index.html">Калькулятор Курта(Curta)</a></li>
-        <li><a href="moniac/index.html">Moniac</a></li>
-    </ol>
+    <head>
+        <title>Первые механические устройства вычесления</title>
+        <meta charset="utf-8"/>
+    </head>
 
-</body>
+    <body>
+        <h1>Первые механические устройства вычесления</h1>
+        <p>Вступление</p>
+        <ol>
+            <li><a href="antikiter/index.html">Антикитерский механизм</a></li>
+            <li><a href="pascal/index.html">Суммирующая машина Паскаля</a></li>
+            <li><a href="leibniz/index.html">Арифмометр Лейбница</a></li>
+            <li><a href="difference/index.html">Разностная машина Чарльза Бэббиджа</a></li>
+            <li><a href="z1/index.html">Z1</a></li>
+            <li><a href="curta/index.html">Калькулятор Курта(Curta)</a></li>
+            <li><a href="moniac/index.html">Moniac</a></li>
+        </ol>
+    
+    </body>
 </html>
