Иправил структура тегов

--- a/Сайт/marchant/index.html
+++ b/Сайт/marchant/index.html
@@ -1,15 +1,34 @@
 <html>
-<body>
-<header>
+    <head>
+        <meta charset="utf-8"/>
+                <a href="#" class="previous">&laquo;Назад</a>
+                <a href="#" class="next">Вперед &raquo;</a>
+                
+                <a href="#" class="previous round">&#8249;</a>
+                <a href="#" class="next round">&#8250;</a>
+        <title>MONIAC</title>
+    </head>   
+    <body>
+   
 
-    <title>Калькулятор Marchant</title>
-</header>
-<h2 align="center">Калькулятор Marchant</h2>
-<p>Создан компанией Marchant Calculating Machine Co. была основана в 1911 Родни и Альфредом Мэрчантом в Окленде, Калифорния.</p>
-<h3>Описание</h3>
+        <h1>MONIAC</h1>
 
-<p>Калькулятор Marchant-являлся первым массовым и при этом самым сложным калькулятором.</p>
-<img src="img/SCM_Marchant_calculator.jpg" height="300" width="400">
-<p>Компания построила механический, и затем электромеханические калькуляторы, у которых была репутация надежности. Первые модели были подобны арифмометру Odhner. В 1918 сотрудник Карл Фриден проектировал новую модель в ответ на доступные проблемы. Это был большой успех, и Фриден стал главным проектировщиком, пока он не покинул в 1934 найденному свою собственную компанию. В 1958 компания была приобретена компанией пишущей машинки Смита Короны в движении диверсификации, которое оказалось необоснованным; компания, которая была теперь известна как SCM, попыталась остаться конкурентоспособной, введя SCM Cogito электронный калькулятор на 240 ср (разработанный манхэттенским ветераном Проекта Стэном Франкелем) в 1965. В течение нескольких лет приливная волна более дешевых электронных калькуляторов опустошила их бизнес, и к середине 1980-х, бизнес пишущей машинки SCM, также, был разрушен появлением недорогих персональных компьютеров, используемых в качестве текстовых процессоров.</p>
-</body>
+        <p>Monetary National Income Analogue Computer, также известный как Гидравлический компьютер Филлипса и Финансофалограф был создан в 1949 году в Новой Зеландии студентом-экономистом Лондонской школы экономики Уильямом Филлипсом, чтобы моделировать национальные экономические процессы Великобритании. MONIAC был аналоговым компьютером, который использовал флюидику (струйную логику) для моделирования процессов экономики. Название MONIAC, видимо, появилось по ассоциации с ENIAC (одной из первых ЭВМ) и англ. money.</p>
+
+        <h2>Описание</h2>
+
+        <img src="img/reserve-bank-museum.jpg" height="300" width="400">
+
+        <p>Размер MONIAC составлял примерно 2 м в высоту, 1,2 м в ширину и почти 1 м в глубину. Сам компьютер состоял из ряда прозрачных пластиковых емкостей и труб, которые крепились к деревянной доске. Каждый бак представлял какой-либо аспект национальной экономики Великобритании. Денежный поток демонстрировался цветной водой. В верхней части доски был большой резервуар, который назывался казной. Вода (представляющая деньги) протекала из казны в другие резервуары, представляющие различные способы расхода денег. Например, были баки, которые «отвечали» за здравоохранение и образование. Для увеличения расходов на здравоохранение следовало открыть кран для слива воды из казны в бак, который «олицетворял» расходы на здравоохранение. Далее вода текла в другие баки, представляющие другие взаимодействия в экономике. Вода могла закачиваться обратно в казну из некоторых баков, представлявших налоги. Изменения налоговых ставок были смоделированы путём увеличения или уменьшения мощности насоса.С помощью тех же принципов моделировались сбережения и доход от инвестиций.</p>
+
+        <h2> Изобретатель </h2>
+  
+        <p>Олбан Уильям Филлипс 18 ноября 1914, Данневирк, Новая Зеландия — 4 марта 1975, Окленд, Новая Зеландия) — новозеландский экономист, длительное время работавший в Великобритании. Автор кривой Филлипса (1958).</p>
+
+        <img src="img/Professor_A.W.H_(Bill)_Phillips.jpg" width="400" height="275">
+
+
+    </body>
+
+
 </html>
