--- a/Сайт/difference/index.html
+++ b/Сайт/difference/index.html
@@ -1,21 +1,36 @@
 <html>
-<body>
-  <header>
- <title>Ра́зностная маши́на Чарльза Бэббиджа</title>
-</header>
-<h2 align="center">Ра́зностная маши́на Чарльза Бэббиджа</h2>
+  <head>
+    <meta charset="utf-8"/>
+    <a href="#" class="previous">&laquo;Назад</a>
+    <a href="#" class="next">Вперед &raquo;</a>
+           
+    <a href="#" class="previous round">&#8249;</a>
+    <a href="#" class="next round">&#8250;</a>
+    <title>Ра́зностная маши́на Чарльза Бэббиджа</title>
+  </head>
+  <body>
 
-<p>Ра́зностная маши́на Чарльза Бэббиджа — механический аппарат, изобретённый английским математиком Чарльзом Бэббиджем, предназначенный для автоматизации вычислений путём аппроксимации функций многочленами и вычисления конечных разностей. Возможность приближённого представления в многочленах логарифмов и тригонометрических функций позволяет рассматривать эту машину как довольно универсальный вычислительный прибор.</p>
+ 
+
+    <h1>Ра́зностная маши́на Чарльза Бэббиджа</h1>
+
+    <p>Ра́зностная маши́на Чарльза Бэббиджа — механический аппарат, изобретённый английским математиком Чарльзом Бэббиджем, предназначенный для автоматизации вычислений путём аппроксимации функций многочленами и вычисления конечных разностей. Возможность приближённого представления в многочленах логарифмов и тригонометрических функций позволяет рассматривать эту машину как довольно универсальный вычислительный прибор.</p>
     <img src="img/350.jpg" width="250" height="300">
-    <h3>История создания</h3>
+    <h2>История создания</h2>
+    <p>Ра́зностная маши́на Чарльза Бэббиджа — механический аппарат, изобретённый английским математиком Чарльзом Бэббиджем, предназначенный для автоматизации вычислений путём аппроксимации функций многочленами и вычисления конечных разностей. Возможность приближённого представления в многочленах логарифмов и тригонометрических функций позволяет рассматривать эту машину как довольно универсальный вычислительный прибор.</p>
+    <p>Идея разностной машины пришла в голову Иогану Мюллеру в 1788 году, но принято считать, что Бэббидж основывался в своем изобретении на работы Гаспара де Прони. В 1822 году он сконструировал первую модель разностной машины, на которой можно было показать принцип для создания большого настоящего механизма.
+        Механизм разностной машины - десятичный, то есть для расчетов используются знакомые десять чисел от 0 до 9. Каждой шестеренке в механизме соответствовала своя цифра, разряд цифры определялся колесом, на котором она закреплена. Тем не менее, даже так разностная машину имеющая восемнадцать цифр и шесть разрядов состояла бы из 25 000 частей – половина для вычислений, другая для показа результатов. Если бы этот механизм был построен, он бы весил четыре тонны и имел бы два с половиной метра в высоту. </p>
+    <p>Изобретатель не представлял с какими трудностями он столкнется во время постройки своего устройства. И, как следствие этому: не помогли даже государственные субсидии (а это не мало – 17000 фунтов) – дело застопорилось.
+        Тогда же, в 1834 году, Бэббидж задумал более амбициозную машину, позже названную аналитической, и она была уже самым настоящим компьютером - программируемым вычислительным механизмом.
+        Несмотря на то, что машины так и не были построены Бэббиджем, их разработка и описание оценивается как одно из потрясающих интеллектуальных достижений 19- го века. </p>
 
-<p>Идея разностной машины пришла в голову Иогану Мюллеру в 1788 году, но принято считать, что Бэббидж основывался в своем изобретении на работы Гаспара де Прони. В 1822 году он сконструировал первую модель разностной машины, на которой можно было показать принцип для создания большого настоящего механизма.</p>
-<p>Механизм разностной машины - десятичный, то есть для расчетов используются знакомые десять чисел от 0 до 9. Каждой шестеренке в механизме соответствовала своя цифра, разряд цифры определялся колесом, на котором она закреплена. Тем не менее, даже так разностная машину имеющая восемнадцать цифр и шесть разрядов состояла бы из 25 000 частей – половина для вычислений, другая для показа результатов. Если бы этот механизм был построен, он бы весил четыре тонны и имел бы два с половиной метра в высоту.</p>
-Изобретатель не представлял с какими трудностями он столкнется во время постройки своего устройства. И, как следствие этому: не помогли даже государственные субсидии (а это не мало – 17000 фунтов) – дело застопорилось.
-Тогда же, в 1834 году, Бэббидж задумал более амбициозную машину, позже названную аналитической, и она была уже самым настоящим компьютером - программируемым вычислительным механизмом.
-Несмотря на то, что машины так и не были построены Бэббиджем, их разработка и описание оценивается как одно из потрясающих интеллектуальных достижений 19- го века.
-<h3 align="center">Изобретатель</h3>
-<p>Ча́рльз Бэ́ббидж  26 декабря 1791, Лондон, Англия — 18 октября 1871, там же) — английский математик, изобретатель . Иностранный член-корреспондент Императорской академии наук в Санкт-Петербурге (1832). Написал труды по теории функций, механизации счёта в экономике. И также кроме Ра́зностной маши́н,сконструировал и построил (1820-22) машину для табулирования.</p>
-<img src="img/1377042.jpg" width="250" height="300">
-</body>
+   
+
+    <h2>Изобретатель</h2>
+
+    <p>Ча́рльз Бэ́ббидж  26 декабря 1791, Лондон, Англия — 18 октября 1871, там же) — английский математик, изобретатель . Иностранный член-корреспондент Императорской академии наук в Санкт-Петербурге (1832). Написал труды по теории функций, механизации счёта в экономике. И также кроме Ра́зностной маши́н,сконструировал и построил (1820-22) машину для табулирования.</p>
+
+    <img src="img/1377042.jpg" width="250" height="300">
+
+  </body>
 </html>
