--- a/Сайт/leibniz/index.html
+++ b/Сайт/leibniz/index.html
@@ -1,16 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
+
     <head>
       <meta charset="utf-8"/>
-              <a href="#" class="previous">&laquo;Назад</a>
-              <a href="#" class="next">Вперед &raquo;</a>
-              
-              <a href="#" class="previous round">&#8249;</a>
-              <a href="#" class="next round">&#8250;</a>
        <title>Арифмометр Лейбница</title>
     </head>
 
     <body>
-
+        <header>
+            <a href="../index.html" class="previous">Назад</a>
+        </header>
        <h1>Арифмометр Лейбница</h1>
        <p>Арифмометр Лейбница, 1672 —арифмометр, изобретённый немецким математиком Готфридом Вильгельмом Лейбницем, Готфрида Вильгельма Лейбница который был способен складывать, вычитать, умножать и делить.</p>
 
@@ -35,6 +34,9 @@
 
        <img src="img/Christoph_Bernhard_Francke(ca._1695).jpg" width="300" height="400">
 
+        <footer>
+            Проект по информатике Быстрова Алексея, 9 "Г" класс. (с) 2021 год
+        </footer>
 
     </body> 
  </html>
