--- a/Сайт/antikiter/index.html
+++ b/Сайт/antikiter/index.html
@@ -3,6 +3,28 @@
     <head>
         <meta charset="utf-8"/>
         <title>Антикитерский механизм</title>
+        <style>
+            header{
+               display: block;
+                width: 100%;
+                height: 30px;
+                background-color: aqua;
+            }
+            body{
+                max-width: 960px    ;
+                min-width: 480px;
+                margin-left:auto;
+                margin-right: auto;
+            }
+            p {
+                font-size: 25px;
+                text-align: justify;
+
+            }
+            img {
+                margin: 16px;
+            }
+        </style>
     </head>
 
     <body>
@@ -11,6 +33,7 @@
         </header>
 
         <h1>Антикитерский механизм</h1>
+        <img align="right" width="300px" height="250px" src="img/abcd.jpg">
 
         <p>Антиките́рский механи́зм (другие варианты написания: андики́тирский, антикифирский, антикиферский; др.-греч.
             Μηχανισμός των Αντικυθήρων) — механическое устройство, поднятое в 1901 году с древнего судна. Остатки судна
@@ -29,7 +52,7 @@
         <p>Устройства, аналогичные антикитерскому механизму, упоминаются более чем в дюжине литературных произведений,
             которые написаны с 300 года до н. э. по 500 год н. э.</p>
 
-        <img width=300px" height="250px" src="img/abcd.jpg">
+
 
         <h2>История открытия</h2>
 
