--- a/Сайт/index.html
+++ b/Сайт/index.html
@@ -2,6 +2,21 @@
     <head>
         <title>Первые механические устройства вычесления</title>
         <meta charset="utf-8"/>
+		<style>
+		p
+		{
+		
+		padding: 10px;
+		margin: 15px;
+		border: 3px solid #000000;
+		}
+		body { 
+	    background-images:url(../Исходные материалы/images/1.jpg);
+		}
+		
+		
+		
+		</style>
     </head>
 
 
