Доработал дизайн и испровил ошибки

--- a/Сайт/index.html
+++ b/Сайт/index.html
@@ -8,21 +8,43 @@
 		
 		padding: 10px;
 		margin: 15px;
-		border: 3px solid #000000;
+		text-align: left;
+		font-size: 21px;
 		}
-		body { 
-	    background-images:url(../Исходные материалы/images/1.jpg);
+		li{
+		font-size: 24px;
+		
+		
+		
+		}
+		header
+		{
+		font-size: 40px;
+		border-bottom: 3px solid maroon;
 		}
 		
+		 a { 
+    text-decoration: none;
+	}
+	 a:hover { 
+    text-decoration: underline;
+			 }
+			 
+	
+	 
+	
 		
 		
+		
+	
 		</style>
     </head>
 
 
     <body>
-        <h1>Первые механические устройства вычесления</h1>
-        <p>Вступление</p>
+	<header>Первые механические устройства вычесления</header>
+        
+        <p> Сайт о первых механические устройствах вычесления, на данном сайте представленно 7 устройств и изложенна основная информация о них.</p>
         <ol>
             <li><a href="antikiter/index.html">Антикитерский механизм</a></li>
             <li><a href="pascal/index.html">Суммирующая машина Паскаля</a></li>
