--- a/Сайт/marchant/index.html
+++ b/Сайт/marchant/index.html
@@ -4,13 +4,16 @@
     <head>
         <meta charset="utf-8"/>
         <title>MONIAC</title>
-    </head>
+    
+	<link rel="stylesheet" type="text/css" href="../CSS/site.css">
+	
+	</head>
+	
     <body>
         <header>
             <a href="../index.html" class="previous">Назад</a>
+			<div>MONIAC</div>
         </header>
-
-        <h1>MONIAC</h1>
 
         <p>Monetary National Income Analogue Computer, также известный как Гидравлический компьютер Филлипса и
             Финансофалограф был создан в 1949 году в Новой Зеландии студентом-экономистом Лондонской школы экономики
