--- a/Сайт/difference/index.html
+++ b/Сайт/difference/index.html
@@ -10,13 +10,12 @@
     <body>
         <header>
             <a href="../index.html" class="previous">Назад</a>
-			 <div>Разностная машина Чарльза Бэббиджа</div>
+            <h1>Разностная машина Чарльза Бэббиджа</h1>
       
 	  </header>
 
-<img src="img/350.jpg" width="300px" height="250" align="right">
-
-        <p>Разностная машина Чарльза Бэббиджа — механический аппарат, изобретённый английским математиком Чарльзом
+        <p><img src="img/350.jpg" width="300px" height="250" align="right">
+            Разностная машина Чарльза Бэббиджа — механический аппарат, изобретённый английским математиком Чарльзом
             Бэббиджем, предназначенный для автоматизации вычислений путём аппроксимации функций многочленами и
             вычисления конечных разностей. Возможность приближённого представления в многочленах логарифмов и
             тригонометрических функций позволяет рассматривать эту машину как довольно универсальный вычислительный
@@ -48,8 +47,8 @@
 
 
         <h2>Изобретатель</h2>
-<img src="img/1377042.jpg" width="250" height="300" align="left">
-        <p class="otstup">Чарльз Бэббидж 26 декабря 1791, Лондон, Англия — 18 октября 1871, там же) — английский математик,
+        <p><img src="img/1377042.jpg" width="250" height="300" align="left">
+            Чарльз Бэббидж 26 декабря 1791, Лондон, Англия — 18 октября 1871, там же) — английский математик,
             изобретатель . Иностранный член-корреспондент Императорской академии наук в Санкт-Петербурге (1832). Написал
             труды по теории функций, механизации счёта в экономике. И также кроме Ра́зностной маши́н,сконструировал и
             построил (1820-22) машину для табулирования.</p>
