--- a/Сайт/pascal/index.html
+++ b/Сайт/pascal/index.html
@@ -13,14 +13,15 @@
 
         <header>
             <a href="../index.html" class="previous">Назад</a>
+            <h1>Суммирующая машина Паскаля</h1>
         </header>
 
-        <h1>Суммирующая машина Паскаля</h1>
+
 		
-		<img src="img/Metiers_Pascaline_.jpg" width="350" height="250" align="right">
 
 
-        <p>Суммирующая машина Паскаля (Паскалина) — вычислительное устройство, изобретенное французским ученым Блезом Паскалем (1641, по другим данным 1643). В машине Паскаля каждой цифре соответствовало определенное положение разрядного колеса, разделенного на 10 секторов.</p>
+
+        <p> <img src="img/Metiers_Pascaline_.jpg" width="350" height="250" align="right">Суммирующая машина Паскаля (Паскалина) — вычислительное устройство, изобретенное французским ученым Блезом Паскалем (1641, по другим данным 1643). В машине Паскаля каждой цифре соответствовало определенное положение разрядного колеса, разделенного на 10 секторов.</p>
 
 
         <h2 class="img">История создания</h2>
@@ -66,9 +67,9 @@
 
         <h2>Изобретатель</h2>
 
-		<img src="img/pescal.jpg" width="300" height="400" align="left">
 
-        <p class="otstup">Блез Паскаль -19 июня 1623, Клермон-Ферран, Франция — 19 августа 1662, Париж, Франция) —  
+        <p>		<img src="img/pescal.jpg" width="300" height="400" align="left">
+                Блез Паскаль -19 июня 1623, Клермон-Ферран, Франция — 19 августа 1662, Париж, Франция) —
 		французский математик, механик, физик, литератор и философ. Классик французской литературы, один из основателей математического анализа, теории вероятностей и проективной геометрии, создатель первых образцов счётной техники, автор основного закона гидростатики.</p>
 
 
