--- a/Сайт/curta/index.html
+++ b/Сайт/curta/index.html
@@ -36,7 +36,7 @@
         <h2>Изобретатель</h2>
 
 
-        <p><img src="img/загрузка.jpg" width="250" height="300" align="left">
+        <p><img src="img/curt.jpg" width="250" height="300" align="left">
             Ее создатель- австрийский инженер Курт Херцштарк. Курт Херцштарк родился 26 июля 1902 года в Вене. Его отец
             Самуэль был евреем и бизнесменом, мать Мария была католичка, перешедшая в лютеранство, в этой религии вырос
             и Курт.Был женат, имел сына и дочь. И умер 27 октября 1988 года в Нендельне, Лихтенштейн.</p>
