--- a/Сайт/index.html
+++ b/Сайт/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Первые механические устройства вычесления</title>
+        <title>Первые механические устройства вычисления</title>
         <meta charset="utf-8"/>
 
         <link rel="stylesheet" type="text/css" href="CSS/site.css">
