--- a/Сайт/index.html
+++ b/Сайт/index.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <header><h1>Первые механические устройства вычесления</h1></header>
+        <header><h1>Первые механические устройства вычисления</h1></header>
 
         <p> Mеханические вычислительные устройства — устройства для автоматизации вычислений, которые состоят из
             механических компонентов, таких как рычаги и шестерни, а не на основе электронных компонентов.</p>
