Изменил размер изображений

--- a/Сайт/antikiter/index.html
+++ b/Сайт/antikiter/index.html
@@ -18,7 +18,7 @@
 
 
 
-        <p> <img align="right" width="300px" height="250px" src="img/abcd.jpg">
+        <p> <img align="right"  src="img/abcd.jpg">
             Антикитерский механизм (другие варианты написания: андикитирский, антикифирский) —механическое устройство,
             поднятое в 1901 году с древнего судна. Остатки судна
             и его груз обнаружены греческим водолазом 4 апреля 1900 года недалеко от греческого острова Андикитира.
@@ -77,7 +77,7 @@
 
         <h2>Первые исследования</h2>
 
-        <p>        <img width=300px" height="400px" src="img/abcdef.jpg" align="left">
+        <p>        <img src="img/abcdef.jpg" align="left">
             Первые исследования механизма проводились с 1902 по 1910 и с 1925 по 1930 годы. Уже в ходе первых осмотров
             прибора стало ясно, что «астролябия», как некоторые изначально называли этот сложный прибор, была гораздо
             более продвинутой, чем любые известные астролябии. Редиадис, Радос и Теофанидис (все — греческие
