--- a/Сайт/curta/index.html
+++ b/Сайт/curta/index.html
@@ -18,7 +18,7 @@
 
 
 
-        <p> <img width="300px" height="250px" align="right" src="img/2a361bf126f7ae2492842c371caec6e9.jpg">Curta — карманный арифмометр, выпущенный в 1948 году. Curta представляла собой небольшой цилиндр, помещающийся
+        <p> <img  align="right" src="img/2a361bf126f7ae2492842c371caec6e9.jpg">Curta — карманный арифмометр, выпущенный в 1948 году. Curta представляла собой небольшой цилиндр, помещающийся
             в руке. Могла производить операции сложения, вычитания, умножения, деления.</p>
 
 
@@ -36,7 +36,7 @@
         <h2>Изобретатель</h2>
 
 
-        <p><img src="img/curt.jpg" width="250" height="300" align="left">
+        <p><img src="img/curt.jpg"  align="left">
             Ее создатель- австрийский инженер Курт Херцштарк. Курт Херцштарк родился 26 июля 1902 года в Вене. Его отец
             Самуэль был евреем и бизнесменом, мать Мария была католичка, перешедшая в лютеранство, в этой религии вырос
             и Курт.Был женат, имел сына и дочь. И умер 27 октября 1988 года в Нендельне, Лихтенштейн.</p>
