--- a/Сайт/moniac/index.html
+++ b/Сайт/moniac/index.html
@@ -16,7 +16,7 @@
         </header>
 
 
-        <p><img src="img/reserve-bank-museum.jpg" height="300" width="400" align="right">Monetary National Income Analogue Computer, также известный как Гидравлический компьютер Филлипса и
+        <p><img src="img/reserve-bank-museum.jpg"  align="right">Monetary National Income Analogue Computer, также известный как Гидравлический компьютер Филлипса и
             Финансофалограф был создан в 1949 году в Новой Зеландии студентом-экономистом Лондонской школы экономики
             Уильямом Филлипсом, чтобы моделировать национальные экономические процессы Великобритании. MONIAC был
             аналоговым компьютером, который использовал флюидику (струйную логику) для моделирования процессов
@@ -36,7 +36,7 @@
 
         <h2> Изобретатель </h2>
 
-        <p>        <img src="img/Professor_A.W.H_(Bill)_Phillips.jpg" width="300" height="275" align="left">
+        <p>        <img src="img/Professor_A.W.H_(Bill)_Phillips.jpg" align="left">
             Олбан Уильям Филлипс 18 ноября 1914, Данневирк, Новая Зеландия — 4 марта 1975, Окленд, Новая
             Зеландия) —
             новозеландский экономист, длительное время работавший в Великобритании. Автор кривой Филлипса (1958).</p>
