--- a/Сайт/pascal/index.html
+++ b/Сайт/pascal/index.html
@@ -21,7 +21,7 @@
 
 
 
-        <p> <img src="img/Metiers_Pascaline_.jpg" width="350" height="250" align="right">Суммирующая машина Паскаля (Паскалина) — вычислительное устройство, изобретенное французским ученым Блезом Паскалем (1641, по другим данным 1643). В машине Паскаля каждой цифре соответствовало определенное положение разрядного колеса, разделенного на 10 секторов.</p>
+        <p> <img src="img/Metiers_Pascaline_.jpg" align="right">Суммирующая машина Паскаля (Паскалина) — вычислительное устройство, изобретенное французским ученым Блезом Паскалем (1641, по другим данным 1643). В машине Паскаля каждой цифре соответствовало определенное положение разрядного колеса, разделенного на 10 секторов.</p>
 
 
         <h2 class="img">История создания</h2>
@@ -68,7 +68,7 @@
         <h2>Изобретатель</h2>
 
 
-        <p>		<img src="img/pescal.jpg" width="300" height="400" align="left">
+        <p>		<img src="img/pescal.jpg"  align="left">
                 Блез Паскаль -19 июня 1623, Клермон-Ферран, Франция — 19 августа 1662, Париж, Франция) —
 		французский математик, механик, физик, литератор и философ. Классик французской литературы, один из основателей математического анализа, теории вероятностей и проективной геометрии, создатель первых образцов счётной техники, автор основного закона гидростатики.</p>
 
