--- a/Сайт/difference/index.html
+++ b/Сайт/difference/index.html
@@ -14,7 +14,7 @@
       
 	  </header>
 
-        <p><img src="img/350.jpg" width="300px" height="250" align="right">
+        <p><img src="img/350.jpg"  align="right">
             Разностная машина Чарльза Бэббиджа — механический аппарат, изобретённый английским математиком Чарльзом
             Бэббиджем, предназначенный для автоматизации вычислений путём аппроксимации функций многочленами и
             вычисления конечных разностей. Возможность приближённого представления в многочленах логарифмов и
@@ -47,7 +47,7 @@
 
 
         <h2>Изобретатель</h2>
-        <p><img src="img/1377042.jpg" width="250" height="300" align="left">
+        <p><img src="img/1377042.jpg" align="left">
             Чарльз Бэббидж 26 декабря 1791, Лондон, Англия — 18 октября 1871, там же) — английский математик,
             изобретатель . Иностранный член-корреспондент Императорской академии наук в Санкт-Петербурге (1832). Написал
             труды по теории функций, механизации счёта в экономике. И также кроме Ра́зностной маши́н,сконструировал и
