--- a/Сайт/z1/index.html
+++ b/Сайт/z1/index.html
@@ -1,4 +1,4 @@
-<html>
+		<html>
     <head>
         <meta charset="utf-8"/>
 
@@ -16,7 +16,7 @@
         </header>
 
 
-        <p><img src="img/Computers.jpg" width="400" height="300" align="right">
+        <p><img src="img/Computers.jpg"  align="right">
             Z1- механическое вычислительное устройство, созданное в 1938 году, стало первой ограниченно программируемой
             вычислительной машиной немецкого инженера Конрада Цузе. Это двоичная вычислительная машина с вводом данных с
             помощью клавиатуры, в десятичной системе исчисления в виде чисел с плавающей запятой. Главным отличием от
@@ -39,7 +39,7 @@
         <h2>Изобретатель</h2>
 
 
-        <p>        <img src="img/Konrad_Zuse.jpg" alt="Изобретатель" height="275" width="300" align="left">
+        <p>        <img src="img/Konrad_Zuse.jpg" alt="Изобретатель" align="left">
             Доктор Конрад Эрнст Отто Цузе родился 22 июня 1910, Берлин, Германская империя — 18 декабря
             1995, Хюнфельд
             — немецкий инженер, пионер компьютеростроения. Также известен благодаря , созданию первого языка
